--- a/WhiteRabbit/WhiteRabbit.csproj
+++ b/WhiteRabbit/WhiteRabbit.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>WhiteRabbit.TerrainForm.Program</StartupObject>
+    <StartupObject>WhiteRabbit.TempForm.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpDX, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
@@ -80,22 +80,26 @@
     </ApplicationDefinition>
     <Compile Include="Framework\XHelper.cs" />
     <Compile Include="Framework\XUtilities.cs" />
-    <Compile Include="TempForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TempForm.Designer.cs">
-      <DependentUpon>TempForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Framework\TextureUtilities.cs" />
     <Compile Include="Framework\UploadBuffer.cs" />
     <Compile Include="Shapes\FrameResource.cs" />
     <Compile Include="Shapes\Program.cs" />
     <Compile Include="Shapes\RenderItem.cs" />
     <Compile Include="Shapes\Shapes.cs" />
+    <Compile Include="XLoader\FrameResource.cs" />
+    <Compile Include="TempForm\Program.cs" />
+    <Compile Include="XLoader\RenderItem.cs" />
+    <Compile Include="TempForm\TempForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TempForm\TempForm.Designer.cs">
+      <DependentUpon>TempForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TerrainForm\FrameResource.cs" />
     <Compile Include="TerrainForm\Program.cs" />
     <Compile Include="TerrainForm\RenderItem.cs" />
     <Compile Include="TerrainForm\TerrainForm.cs" />
+    <Compile Include="XLoader\XLoader.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -133,6 +137,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TempForm\TempForm.resx">
+      <DependentUpon>TempForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
